name:                xoverlay
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/noughtmare/gstreamer-video#readme
license:             GPL-3
license-file:        LICENSE
author:              Jaro Reinders
maintainer:          noughtmare@openmailbox.org
copyright:           Copyright: (c) 2016 Jaro Reinders
category:            GUI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Media.Streaming.GStreamer.XOverlay
  build-depends:       base >= 4.7 && < 5
                     , gstreamer
                     , gtk
  default-language:    Haskell2010
  pkgconfig-depends:   gstreamer-interfaces-0.10

source-repository head
  type:     git
  location: https://github.com/noughtmare/xoverlay
